Add documentStore and connect to lsp